# fastapi_docs

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
