[tool.poetry]
name = "docs_fastapi"
version = "0.1.0"
description = ""
authors = ["Doskhan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
uvicorn = "^0.19.0"
fastapi = "^0.104.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
