[tool.poetry]
name = "docs_fastapi"
version = "0.1.0"
description = ""
authors = ["Doskhan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^21.2.0"
uvicorn = "^0.24.0"
fastapi = "^0.104.1"
email-validator = "^2.1.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
